# OTPClient

./: .gitignore  CMakeLists.txt  README.md  SECURITY.md
.circleci/: config.yml
data/: com.github.paolostivanin.OTPClient.appdata.xml  com.github.paolostivanin.OTPClient.desktop  com.github.paolostivanin.OTPClient.gschema.xml  otpclient.gresource.xml  resources.gresource.xml
data/resources/ui/: add_tokens.ui  main_window.ui  pwd.ui  settings.ui  shortcuts.ui
flatpak/: com.github.paolostivanin.OTPClient.yaml
src/: add-from-qr.c  app.c  app.h  data-structs.h  data.h  db-misc.c  db.c  db.h  edit-data.c  get-builder.c  get-builder.h  get-file-size.c  gquarks.c  gui-common.c  gui-common.h  imports.c  liststore-misc.c  lock-app.c  main.c  manual-add-cb.c  manual-add-cb.h  message-dialogs.c  parse-data.c  password-cb.c  qrcode-parser.c  screenshot-add-cb.c  settings.c  shortcuts.c  treeview.c  webcam-add-cb.c
src/common/: common.c  version.h.in
src/ui/: add_token_dialogs.ui  main.ui  menus.ui  misc_diags.ui  otpclient.ui  pwd_dialogs.ui  shortcuts.ui
